--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://emojien.net/png/2b50.png"
+      href="https://emojien.net/png/1f451.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TO DO LIST</title>
+    <title>Digital Nomad List</title>
   </head>
   <body>
     <div id="root"></div>
